--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2020 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">All rights reserved 2019-20 Website Designed and
+      <a class="text-reset fw-bold" href="https://www.brillicaservices.com/">All rights reserved 2019-20 Website Designed and
         Developed by Brillica Services.</a>
     </div>
     <!-- Copyright -->
