--- a/index.html
+++ b/index.html
@@ -200,11 +200,9 @@
         <div class="card p-4 text-white" style="border:unset">
           <img src="images/Group 2250.png" class="card-img" alt="...">
           <div class="card-img-overlay" style="padding: 3.25em;">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.
-              This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
+            <h5 class="card-title">Technology Training</h5>
+            <p class="card-text">An internship is the best way to put classroom knowledge to practice.</p>
+            <a class="card-text">Know More</a>
           </div>
         </div>
       </div>
@@ -213,11 +211,9 @@
         <div class="card p-4 text-white" style="border:unset">
           <img src="images/Group 2251.png" class="card-img" alt="...">
           <div class="card-img-overlay" style="padding: 3.25em;">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.
-              This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
+            <h5 class="card-title">Web and App Development Services</h5>
+            <p class="card-text">An internship is the best way to put classroom knowledge to practice.</p>
+            <a class="card-text">Know More</a>
           </div>
         </div>
       </div>
@@ -226,11 +222,9 @@
         <div class="card p-4 text-white" style="border:unset">
           <img src="images/Group 2252.png" class="card-img" alt="...">
           <div class="card-img-overlay" style="padding: 3.25em;">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.
-              This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
+            <h5 class="card-title">Recruitment Services</h5>
+            <p class="card-text">An internship is the best way to put classroom knowledge to practice.</p>
+            <a class="card-text">Know More</a>
           </div>
         </div>
       </div>
@@ -239,11 +233,9 @@
         <div class="card p-4 text-white" style="border:unset">
           <img src="images/Group 2253.png" class="card-img" alt="...">
           <div class="card-img-overlay" style="padding: 3.25em;">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.
-              This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
+            <h5 class="card-title">Internship</h5>
+            <p class="card-text">An internship is the best way to put classroom knowledge to practice.</p>
+            <a class="card-text">Know More</a>
           </div>
         </div>
       </div>
@@ -252,11 +244,9 @@
         <div class="card p-4 text-white" style="border:unset">
           <img src="images/Group 2254.png" class="card-img" alt="...">
           <div class="card-img-overlay" style="padding: 3.25em;">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.
-              This content is a little bit longer.</p>
-            <p class="card-text">Last updated 3 mins ago</p>
+            <h5 class="card-title">Faculty Development Program</h5>
+            <p class="card-text">An internship is the best way to put classroom knowledge to practice.</p>
+            <a class="card-text">Know More</a>
           </div>
         </div>
       </div>
